--- a/mriggs.html
+++ b/mriggs.html
@@ -11,7 +11,7 @@
 Martin
 </h1>
 <div id='idCard'>
-	<img src="/jpg/mriggs.PNG" alt="ID card of mriggs">
+	<img src="./ressource/HtmlPage/jpg/mriggs.jpg" alt="ID card of mriggs">
 </div><div id='outils'>
 <div>
   <label for="scales">Lampe Torche</label>
