--- a/sconnor.html
+++ b/sconnor.html
@@ -11,7 +11,7 @@
 Sarah
 </h1>
 <div id='idCard'>
-	<img src="/jpg/sconnor.PNG" alt="ID card of sconnor">
+	<img src="./ressource/HtmlPage/jpg/sconnor.jpg" alt="ID card of sconnor">
 </div><div id='outils'>
 <div>
   <label for="scales">Lampe Torche</label>
