--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id='logo'>
-    <img id='gosecuri' src="/jpg/GoSecuri.PNG" alt="logo of GoSecuri">
+    <img id='gosecuri' src="./ressource/HtmlPage/jpg/GoSecuri.PNG" alt="logo of GoSecuri">
 </div>
 <div id='agents'><a href='cberthier.html'>cberthier</a><br>
     <a href='sconnor.html'>sconnor</a><br>
