--- a/jrouletabille.html
+++ b/jrouletabille.html
@@ -11,7 +11,7 @@
 Joseph
 </h1>
 <div id='idCard'>
-	<img src="/jpg/jrouletabille.PNG" alt="ID card of jrouletabille">
+	<img src="./ressource/HtmlPage/jpg/jrouletabille.jpg" alt="ID card of jrouletabille">
 </div><div id='outils'>
 <div>
   <label for="scales">Lampe Torche</label>
