--- a/ressource/HtmlPage/afoley.html
+++ b/ressource/HtmlPage/afoley.html
@@ -11,7 +11,7 @@
 Alastor
 </h1>
 <div id='idCard'>
-	<img src="web/jpg/afoley.PNG" alt="ID card of afoley">
+	<img src="./HtmlPage/jpg/afoley.jpg" alt="ID card of afoley">
 </div><div id='outils'>
 <div>
   <label for="scales">Lampe Torche</label>
