--- a/ressource/HtmlPage/jmacclane.html
+++ b/ressource/HtmlPage/jmacclane.html
@@ -11,7 +11,7 @@
 John
 </h1>
 <div id='idCard'>
-	<img src="/jpg/jmacclane.PNG" alt="ID card of jmacclane">
+	<img src="./ressource/HtmlPage/jpg/jmacclane.PNG" alt="ID card of jmacclane">
 </div><div id='outils'>
 <div>
   <label for="scales">Lampe Torche</label>
