--- a/sholmes.html
+++ b/sholmes.html
@@ -11,7 +11,7 @@
 Sherlock
 </h1>
 <div id='idCard'>
-	<img src="/jpg/sholmes.PNG" alt="ID card of sholmes">
+	<img src="./ressource/HtmlPage/jpg/sholmes.jpg" alt="ID card of sholmes">
 </div><div id='outils'>
 <div>
   <label for="scales">Lampe Torche</label>
