--- a/jwest.html
+++ b/jwest.html
@@ -11,7 +11,7 @@
 John
 </h1>
 <div id='idCard'>
-	<img src="./ressource/HtmlPage/jpg/jwest.jpg" alt="ID card of jwest">
+	<img src="./ressource/HtmlPage/jpg/jwest.JPG" alt="ID card of jwest">
 </div><div id='outils'>
 <div>
   <label for="scales">Lampe Torche</label>
