--- a/cberthier.html
+++ b/cberthier.html
@@ -11,7 +11,7 @@
 Corinne
 </h1>
 <div id='idCard'>
-	<img src="./ressource/HtmlPage/jpg/cberthier.jpg" alt="ID card of cberthier">
+	<img src="./ressource/HtmlPage/jpg/cberthier.JPG" alt="ID card of cberthier">
 </div><div id='outils'>
 <div>
   <label for="scales">Lampe Torche</label>
