--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <div id='logo'>
     <img id='gosecuri' src="./ressource/HtmlPage/jpg/GoSecuri.PNG" alt="logo of GoSecuri">
 </div>
-<div id='agents'><a href='cberthier.html'>cberthier</a><br>
-    <a href='sconnor.html'>sconnor</a><br>
-    <a href='jmacclane.html'>jmacclane</a><br>
-    <a href='afoley.html'>afoley</a><br>
-    <a href='mriggs.html'>mriggs</a><br>
-    <a href='jwest.html'>jwest</a><br>
-    <a href='sholmes.html'>sholmes</a><br>
-    <a href='jrouletabille.html'>jrouletabille</a><br>
+<div id='agents'><a href='login.html'>cberthier</a><br>
+    <a href='login.html'>sconnor</a><br>
+    <a href='login.html'>jmacclane</a><br>
+    <a href='login.html'>afoley</a><br>
+    <a href='login.html'>mriggs</a><br>
+    <a href='login.html'>jwest</a><br>
+    <a href='login.html'>sholmes</a><br>
+    <a href='login.html'>jrouletabille</a><br>
 
 </div>
 </body>
