--- a/login.html
+++ b/login.html
@@ -136,7 +136,7 @@ span.psw {
     <div class="container">
         <div class="imgcontainer">
             <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-            <img src="./jpg/GoSecuri.PNG" alt="Avatar" class="avatar">
+            <img src="./ressource/HtmlPage/jpg/GoSecuri.PNG" alt="Avatar" class="avatar">
             <h2>Gosecuri authentification</h2>
         </div>
         <label for="uname" id="uname" ><b>Username</b></label>
